tests/compile-fail/integration__integration__image_sources__png_import_with_offset_too_big__failure.snap
---
source: tests/integration/image_sources.rs
expression: stderr
---
error: image file 'tests/integration/resources/dir-with-bad-images/subdir/hai-10x18+105+9.png' too small (10x18) to extract a texture of size 10x18 at offset (3, 4)
  ┌─ <input>:4:11
  │
4 │     path: "subdir/hai-10x18+105+9.png",
  │           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ image too small


